# frieze

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASING.md
crates/domain/frieze-model/: Cargo.toml
crates/domain/frieze-model/src/: cargo_feature_name.rs  config_error.rs  description.rs  error.rs  lib.rs  maybe.rs  oas_version_check.rs  object_schema.rs  one_of_schema.rs  output_file_path.rs  output_format.rs  output_name.rs  package_metadata.rs  package_name.rs  package_root.rs  partial_file_path.rs  presence.rs  property.rs  property_name.rs  property_type.rs  scalar_schema.rs  schema.rs  schema_name.rs  schemas.rs  string_enum_schema.rs
crates/domain/frieze-model/tests/: config_error_messages.rs
crates/domain/frieze-usecase/: Cargo.toml
crates/domain/frieze-usecase/src/: boundary.rs  compose.rs  edit_distance.rs  error.rs  gateway.rs  generate.rs  inventory.rs  lib.rs  naming.rs  primitive_schema_impls.rs  schema.rs  schemas_builder.rs  to_value.rs  to_yaml.rs  wrapper_impls.rs
crates/domain/frieze-usecase/tests/: error_messages.rs
crates/gateway/frieze-cargo/: Cargo.toml
crates/gateway/frieze-cargo/src/: collector.rs  error.rs  frieze_source.rs  inspect.rs  lib.rs  resolve.rs  scratch.rs
crates/gateway/frieze-fs/: Cargo.toml
crates/gateway/frieze-fs/src/: edit_distance.rs  error.rs  lib.rs  metadata_source.rs  output_sink.rs  partial_source.rs
crates/libs/frieze/: Cargo.toml
crates/libs/frieze-macros/: Cargo.toml
crates/libs/frieze-macros/src/: doc.rs  expand_enum.rs  expand_struct.rs  field.rs  lib.rs  namespace_attr.rs  property_type.rs  register.rs  rename.rs  serde_scan.rs  ty.rs
crates/libs/frieze-macros/tests/: trybuild.rs
crates/libs/frieze-macros/tests/ui/: add_primitive_rejected.rs  add_primitive_rejected.stderr  enum_data_carrying_without_tag.stderr  enum_empty_unsupported.stderr  enum_internal_tagged_newtype_string_enum.rs  enum_internal_tagged_newtype_string_enum.stderr  enum_struct_variant.rs  enum_tuple_variant_n2.rs  generic_enum_const_generic_unsupported.rs  generic_enum_lifetime_unsupported.stderr  generic_struct_const_generic_unsupported.rs  generic_struct_lifetime_unsupported.stderr  maybe_missing_both.rs  maybe_missing_both.stderr  maybe_missing_default.rs  maybe_missing_default.stderr  maybe_missing_skip.rs  maybe_missing_skip.stderr  maybe_of_option.rs  maybe_of_option.stderr  namespace_attr_on_struct.rs  namespace_attr_on_struct.stderr  namespace_attr_with_arg.rs  nested_maybe.rs  nested_maybe.stderr  nested_option.stderr  nested_vec.rs  nested_vec.stderr  option_of_maybe.rs  option_of_maybe.stderr  rename_all_direction_split.rs  rename_direction_split_both.rs  rename_direction_split_deserialize.stderr  rename_direction_split_serialize.rs  rename_direction_split_serialize.stderr  rename_empty_string.rs  rename_variant_collision.stderr  serde_flatten_unsupported.rs  union_not_supported.rs  union_not_supported.stderr  (+3 more)
crates/libs/frieze-openapi/: Cargo.toml
crates/libs/frieze-openapi/src/: components.rs  document.rs  info.rs  lib.rs  oas_document.rs  oas_version.rs  object_schema.rs  one_of_schema.rs  schema_object.rs  schema_type.rs  serialize.rs  string_enum_schema.rs  to_yaml.rs  version.rs
crates/libs/frieze-openapi/tests/: serialize.rs
crates/libs/frieze-wire/: Cargo.toml
crates/libs/frieze-wire/src/: lib.rs
crates/libs/frieze/src/: inventory.rs  lib.rs  naming.rs  primitive_schema_impls.rs  register.rs  schema.rs  schemas_builder.rs  wrapper_impls.rs
crates/libs/frieze/tests/: build_auto_collects_enum_reference.rs  build_auto_collects_generic_enum_reference.rs  build_auto_collects_generic_instance.rs  build_auto_collects_generic_reference.rs  build_auto_collects_simple_nested.rs  build_auto_collects_struct_reference.rs  build_detects_oneof_inner_not_struct.rs  build_detects_unresolved_enum_reference.rs  build_detects_unresolved_generic_enum_reference.rs  build_detects_unresolved_generic_reference.rs  build_detects_unresolved_reference.rs  build_resolves_enum_reference.rs  build_resolves_generic_enum_reference.rs  build_resolves_generic_reference.rs  build_resolves_primitive_in_generic.rs  build_resolves_transitive_explicit.rs  compose_partial_with_schemas.rs  compose_rejects_partial_with_schemas.rs  derive_arc_transparent.rs  derive_arc_transparent_e2e.rs  derive_basic_struct.rs  derive_bool_field.rs  derive_box_transparent.rs  derive_box_transparent_e2e.rs  derive_enum_internal_tagged_individual_rename.rs  derive_enum_internal_tagged_rename_all_snake.rs  derive_enum_internal_tagged_single_newtype.rs  derive_enum_internal_tagged_two_newtype.rs  derive_enum_internal_tagged_with_description.rs  derive_generic_enum_with_user_struct.rs  derive_generic_one_of_enum.rs  derive_generic_struct_nested.rs  derive_generic_struct_single_arg_primitive.rs  derive_generic_struct_single_arg_user.rs  derive_generic_struct_two_args.rs  derive_generic_with_internal_tagged_enum.rs  derive_maybe_field_oas_3_0.rs  derive_maybe_field_oas_3_1.rs  derive_maybe_nested_struct_oas_3_0.rs  derive_maybe_nested_struct_oas_3_1.rs  (+79 more)
crates/libs/frieze/tests/common/: mod.rs
crates/libs/frieze/tests/ui/: add_primitive_rejected.rs  add_primitive_rejected.stderr  empty_named_struct.rs  empty_named_struct.stderr  enum_adjacent_tagged.rs  enum_adjacent_tagged.stderr  enum_data_carrying_without_tag.rs  enum_data_carrying_without_tag.stderr  enum_empty_unsupported.rs  enum_internal_tagged_newtype_primitive.rs  enum_internal_tagged_newtype_primitive.stderr  enum_internal_tagged_newtype_string_enum.rs  enum_internal_tagged_newtype_string_enum.stderr  enum_internal_tagged_newtype_vec.rs  enum_internal_tagged_newtype_vec.stderr  enum_internal_tagged_with_unit_variant.rs  enum_internal_tagged_with_unit_variant.stderr  enum_not_supported.rs  enum_not_supported.stderr  enum_struct_variant.rs  enum_struct_variant.stderr  enum_struct_variant_unsupported.rs  enum_struct_variant_unsupported.stderr  enum_tuple_variant_n2.rs  enum_tuple_variant_n2.stderr  enum_tuple_variant_unsupported.rs  enum_tuple_variant_unsupported.stderr  enum_untagged.rs  (+60 more)
(+57 files in other folders)
