[workspace]
resolver = "2"
members = [
    "crates/apps/frieze-cli",
    "crates/domain/frieze-model",
    "crates/domain/frieze-usecase",
    "crates/gateway/frieze-cargo",
    "crates/gateway/frieze-fs",
    "crates/libs/frieze-openapi",
    "crates/libs/frieze-macros",
    "crates/libs/frieze-wire",
    "crates/libs/frieze",
]
# The end-to-end fixtures are standalone packages the CLI is run
# against; excluding them keeps each one its own workspace root while
# still allowing the frieze-cli tests to link them as path
# dev-dependencies.
exclude = [
    "crates/apps/frieze-cli/tests/fixtures/single-output",
    "crates/apps/frieze-cli/tests/fixtures/multi-output",
    "crates/apps/frieze-cli/tests/fixtures/inventory-off",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/x7c1/frieze"

[workspace.dependencies]
indexmap = { version = "2.14", features = ["serde"] }
inventory = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0"
toml = "1"
insta = { version = "1.48", features = ["yaml"] }
trybuild = "1"
tempfile = "3"

frieze-model = { path = "crates/domain/frieze-model", version = "0.1.0" }
frieze-usecase = { path = "crates/domain/frieze-usecase", version = "0.1.0" }
frieze-fs = { path = "crates/gateway/frieze-fs", version = "0.1.0" }
frieze-cargo = { path = "crates/gateway/frieze-cargo", version = "0.1.0" }
frieze-wire = { path = "crates/libs/frieze-wire", version = "0.1.0" }
frieze-openapi = { path = "crates/libs/frieze-openapi", version = "0.1.0" }
frieze-macros = { path = "crates/libs/frieze-macros", version = "0.1.0" }
frieze = { path = "crates/libs/frieze", version = "0.1.0", default-features = false }
