[workspace]
resolver = "2"
members = [
    "crates/apps/frieze-cli",
    "crates/domain/frieze-model",
    "crates/domain/frieze-usecase",
    "crates/gateway/frieze-cargo",
    "crates/gateway/frieze-fs",
    "crates/libs/frieze-openapi",
    "crates/libs/frieze-macros",
    "crates/libs/frieze-wire",
    "crates/libs/frieze",
]
# The end-to-end fixture packages the CLI is run against fall in two
# groups:
#
# - Fixtures linked as path dev-dependencies of frieze-cli (for the
#   byte-equivalence assertions) are pulled into this workspace by
#   cargo's path-dependency auto-inclusion, which overrides `exclude`;
#   they stay plain packages, and a nested `[workspace]` table there
#   would be a hard error.
# - Fixtures the tests only run the binary against carry their own
#   `[workspace]` table (or are workspaces themselves), so cargo
#   treats them as separate workspace roots when invoked inside them.
#
# The entries here document the intended separation for both groups.
exclude = [
    "crates/apps/frieze-cli/tests/fixtures/single-output",
    "crates/apps/frieze-cli/tests/fixtures/multi-output",
    "crates/apps/frieze-cli/tests/fixtures/inventory-off",
    "crates/apps/frieze-cli/tests/fixtures/mixed-formats",
    "crates/apps/frieze-cli/tests/fixtures/feature-gated",
    "crates/apps/frieze-cli/tests/fixtures/version-mismatch",
    "crates/apps/frieze-cli/tests/fixtures/version-skew",
    "crates/apps/frieze-cli/tests/fixtures/vendored-frieze",
    "crates/apps/frieze-cli/tests/fixtures/unknown-key",
    "crates/apps/frieze-cli/tests/fixtures/bad-extension",
    "crates/apps/frieze-cli/tests/fixtures/workspace",
    "crates/apps/frieze-cli/tests/fixtures/virtual-workspace",
    "crates/apps/frieze-cli/tests/fixtures/virtual-no-default",
    "crates/apps/frieze-cli/tests/fixtures/workspace-unknown-key",
]

# Shared crates.io metadata: every crate in this workspace is
# published, ships the same version (see RELEASING.md), and inherits
# the repository README as its crates.io landing page.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/x7c1/frieze"
readme = "README.md"
keywords = ["openapi", "swagger", "schema", "derive", "codegen"]
categories = ["web-programming", "development-tools"]

[workspace.dependencies]
indexmap = { version = "2.14", features = ["serde"] }
inventory = "0.3"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0"
toml = "1"
insta = { version = "1.48", features = ["yaml"] }
trybuild = "1"
tempfile = "3"

frieze-model = { path = "crates/domain/frieze-model", version = "0.1.0" }
frieze-usecase = { path = "crates/domain/frieze-usecase", version = "0.1.0" }
frieze-fs = { path = "crates/gateway/frieze-fs", version = "0.1.0" }
frieze-cargo = { path = "crates/gateway/frieze-cargo", version = "0.1.0" }
frieze-wire = { path = "crates/libs/frieze-wire", version = "0.1.0" }
frieze-openapi = { path = "crates/libs/frieze-openapi", version = "0.1.0" }
frieze-macros = { path = "crates/libs/frieze-macros", version = "0.1.0" }
frieze = { path = "crates/libs/frieze", version = "0.1.0", default-features = false }
