[package]
name = "frieze-usecase"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Use cases for frieze: OAS boundary conversion and document composition."

[features]
default = ["oas-3-0"]
oas-3-0 = ["frieze-openapi/oas-3-0"]
oas-3-1 = ["frieze-openapi/oas-3-1"]

[dependencies]
frieze-model.workspace = true
frieze-openapi.workspace = true
indexmap.workspace = true
