[package]
name = "frieze-usecase"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Use cases for frieze: OAS boundary conversion and document composition."

[dependencies]
frieze-model.workspace = true
frieze-openapi.workspace = true
indexmap.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
