[package]
name = "frieze-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plain Rust representation of the OpenAPI Specification."

[features]
default = ["oas-3-0"]
oas-3-0 = []
oas-3-1 = []

[dependencies]
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
