[package]
name = "frieze-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Plain Rust representation of the OpenAPI Specification."

[dependencies]
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
