[package]
name = "frieze-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Composition root for frieze: injects the concrete gateways and assembles the interactors."

[dependencies]
frieze-cargo.workspace = true
frieze-fs.workspace = true
frieze-usecase.workspace = true
