[package]
name = "frieze"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate OpenAPI Schema Objects from Rust types via proc-macros."

[features]
default = ["inventory"]
# `inventory`-based collection (on by default). Enables
# `SchemasBuilder::from_inventory()` and turns the derive macro's
# `inventory_submit!` token into a real `inventory::submit!` site.
# Disable with `default-features = false` for no_std / WASM / embedded
# targets; without this feature the same derive expansion is a no-op
# submission and `from_inventory()` is not available.
inventory = ["dep:inventory"]

[dependencies]
frieze-model.workspace = true
frieze-macros.workspace = true
inventory = { workspace = true, optional = true }

[dev-dependencies]
frieze-openapi.workspace = true
frieze-usecase.workspace = true
insta.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
