[package]
name = "frieze"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generate OpenAPI Schema Objects from Rust types via proc-macros."

[features]
default = ["inventory"]
# `inventory`-based collection (on by default). Enables
# `SchemasBuilder::from_inventory()` and turns the derive macro's
# `inventory_submit!` token into a real `inventory::submit!` site.
# Disable with `default-features = false` for no_std / WASM / embedded
# targets; without this feature the same derive expansion is a no-op
# submission and `from_inventory()` is not available.
inventory = ["dep:inventory"]

[dependencies]
frieze-model.workspace = true
frieze-macros.workspace = true
inventory = { workspace = true, optional = true }

# The internal dev-dependencies deliberately carry no `version`:
# version-less path dev-dependencies are stripped by `cargo publish`,
# so the published package does not depend on them being released.
[dev-dependencies]
frieze-openapi = { path = "../frieze-openapi" }
frieze-usecase = { path = "../../domain/frieze-usecase" }
insta.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
